--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,7 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
-        <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png"/>
+        <div >
+            <img class="logoo"src="/assets/img/logo.png"/>
         </div>
-        Creative Tim
-    </a>
 </div>
 <div class="sidebar-wrapper">
   <div *ngIf="isMobileMenu()">
