--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -10,15 +10,18 @@
                     <div class="col-8">
                         
                         <div class="form-group">
-                            <label for="exampleInputEmail1" class="form">Email address</label>
-                            <input type="email" class="form-control  input-block-level" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                            <label for="exampleInputEmail1" class="form">Matricule</label>
+                            <input type="email" class="form-control  input-block-level" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Matricule"  [(ngModel)]="matricule">
                             
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1" class="form">Password</label>
-                            <input type="password" class="form-control  input-xlarge" id="exampleInputPassword1" placeholder="Password">
+                            <label for="exampleInputPassword1" class="form">Mot de passe</label>
+                            <input type="password" class="form-control  input-xlarge" id="exampleInputPassword1" placeholder="Mot de passe"  [(ngModel)]="mdp">
                           </div>
-                          <button mat-raised-button color="warn">Se connecter</button>
+                          <div *ngIf="showErrorMessage">
+                            <h1 class="form">{{error}}</h1>
+                          </div>
+                          <button mat-raised-button color="warn" (click)="signin()">Se connecter</button>
                     </div>
                     <div class="col-2"></div>
 
