--- a/frontend/src/app/mouvements-list/mouvements-list.component.html
+++ b/frontend/src/app/mouvements-list/mouvements-list.component.html
@@ -49,7 +49,7 @@
             
         </div>
   
-        <div class="row">
+        <div class="row" *ngIf="this.role==='responsable'|| this.role==='chefProjet'">
           <div class="col-md-12">
               <div class="card">
                   <div class="card-header card-header-danger">
