--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,31 @@
 
-<div class="container">
-    <full-calendar [options]="calendarOptions"></full-calendar>
+<div class="container" style="margin-top: 3%;">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+      <mat-form-field appearance="standard" *ngIf="this.role==='chefProjet'" >
+        <mat-label>Chercher un utilisateur</mat-label>
+        <input matInput  placeholder="Ex. ium" [(ngModel)]="adminuser" >
+        
+    </mat-form-field>
+    </div>
+    <div class="col-3">
+      <button mat-raised-button color="warn" (click)="findUser()" *ngIf="this.role==='chefProjet'" style="height: 60%;margin-top:5%;">Chercher</button>
+
+    </div>
+  </div>
+  
+    <full-calendar [options]="calendarOptions" style="margin-top: 0%;" ></full-calendar>
+    <div class="row"></div>
+  
   </div>
   <style>
     button{
     color: white;
 background-color: #f44336;
 opacity: 1;
+}
+.fc-toolbar-title{
+color: #f44336;
 }
   </style>
