--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -21,6 +21,7 @@
                           <div *ngIf="showErrorMessage">
                             <h1 class="form">{{error}}</h1>
                           </div>
+                          <a routerLink="/signup" style="color: #f44336 ;font-weight: bold;font-size: 15px;">Créer un nouveau compte</a>
                           <button mat-raised-button color="warn" (click)="signin()">Se connecter</button>
                     </div>
                     <div class="col-2"></div>
