--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -41,6 +41,7 @@
                           <div *ngIf="showErrorMessage">
                             <h1 class="form">{{error}}</h1>
                           </div>
+                          <a routerLink="/login" style="color: #f44336 ;font-weight: bold;font-size: 15px;">Revenir à la page précédente</a>
                           <button mat-raised-button color="warn" (click)="signin()">Se connecter</button>
                     </div>
                     <div class="col-2"></div>
