--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -14,6 +14,16 @@
 
     </div>
   </div>
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+      <div *ngIf="showErrorMessage">
+        <h1 class="form">{{error}}</h1>
+      </div>
+    </div>
+    <div class="col-3"></div>
+  </div>
+  
   
     <full-calendar [options]="calendarOptions" style="margin-top: 0%;" ></full-calendar>
     <div class="row"></div>
